--- a/cgl-mooc-builder/views/header.html
+++ b/cgl-mooc-builder/views/header.html
@@ -1,24 +1,21 @@
 <div id="gcb-header" role="banner">
-    <div class="gcb-aux">
-        <a href="/">
-	        <img src="{{course_info.institution.logo.url}}" alt="{{course_info.institution.logo.alt_text}}">
-        </a>
-        <!-- progress bar --> 
-        {% if not transient_student %}
-            <div id="progress-div">
-            	<span id="progress-text">Course Progress</span>
-                <div id="progressbar"></div>
-                <span id="progress-percentage">{{ percentage }}</span>
-            </div>
-			<script>
-			$(function() {
-				$( "#progressbar" ).progressbar({
-					max: {{ complete_value }},
-					value: {{ progress_value }}
-				});
-			});
-            </script> 
-        {% endif %}
-        <!-- progress bar ends-->
-    </div>
+  <div class="gcb-aux"> <a href="/"> <img src="{{course_info.institution.logo.url}}" alt="{{course_info.institution.logo.alt_text}}"> </a> 
+<div class="fb-like" data-href="https://bigdatacourse.appspot.com" data-width="" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
+<div class="fb-share-button" data-href="https://bigdatacourse.appspot.com" data-type="button_count"></div>
+    <!-- progress bar --> 
+    {% if not transient_student %}
+    <div id="progress-div"> <span id="progress-text">Course Progress</span>
+      <div id="progressbar"></div>
+      <span id="progress-percentage">{{ percentage }}</span> </div>
+    <script>
+            $(function() {
+                $( "#progressbar" ).progressbar({
+                    max: {{ complete_value }},
+                    value: {{ progress_value }}
+                });
+            });
+        </script> 
+    {% endif %} </div>
+    
+<!--    progress bar ends-->
 </div>
