comments added to header.html

--- a/cgl-mooc-builder/views/header.html
+++ b/cgl-mooc-builder/views/header.html
@@ -1,3 +1,4 @@
+<!-- add your own facebook like/share buttons here -->
 <div id="gcb-header" role="banner">
   <div class="gcb-aux"> <a href="/"> <img src="{{course_info.institution.logo.url}}" alt="{{course_info.institution.logo.alt_text}}"> </a> 
 <div class="fb-like" data-href="https://bigdatacourse.appspot.com" data-width="" data-layout="button_count" data-action="like" data-show-faces="false" data-share="false"></div>
