updated CSS for instructor

--- a/cgl-mooc-builder/assets/css/main.css
+++ b/cgl-mooc-builder/assets/css/main.css
@@ -1552,6 +1552,7 @@ div.inputEx-Field {
 .instructor {
 	float: left;
 	width: 420px;
+	padding-bottom:16px;
 }
 .instructors-pic {
 	width: 171px;
