changed reference to referral

--- a/cgl-mooc-builder/views/register.html
+++ b/cgl-mooc-builder/views/register.html
@@ -335,9 +335,9 @@
             </li>
 
             <li class="position-relative form-list">
-              <div data-tooltip="Reference" class="register-div">
-                <label class="gcb-reg-form-label" for="reference">How did you learn about our Course?</label>
-                <select name="reference" class="register-input" value="">
+              <div data-tooltip="Referral" class="register-div">
+                <label class="gcb-reg-form-label" for="referral">How did you learn about our Course?</label>
+                <select name="referral" class="register-input" value="">
                   <option value="" selected="selected"> --- </option>
                   <option value="Facebook">Facebook</option>
                   <option value="LinkedIn">LinkedIn</option>
